# tompe

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
code_examples/: llm_client.py
config/: badges.json  mt_backends.yaml  settings.yaml
data/assignments/: 0b5132db-5ac5-417b-9e44-481b1805fcd3.json  13af9735-25d7-4ecf-8c05-582b40e6d302.json  15eeff40-140b-46f5-a0e2-731be672756c.json  364966ac-9b8e-4f86-babc-b93078034033.json  384886e5-de5b-4765-b67f-01de8ae74fc4.json  51449e81-baff-4258-a99f-208fc2247cae.json  53069ea6-dcd2-4a77-b301-e1f676501e08.json  5c47c2ba-d7d1-4396-bb90-74dc4d8a6a1f.json  7c281408-c3ef-475c-9e0c-bec61cd85b66.json  8d160134-fb1e-4158-b9b4-9fa7e30de374.json  a9ffe0de-6612-4710-898c-5e8083fa4948.json  b4f7bcb8-5e5e-48a8-80a6-120619b414ce.json  bde46a4c-1226-4f37-9f0e-8c1330f23ab8.json  bdfaacc2-0307-4b19-88c8-67fd2b897528.json  c00d828a-6c2b-4371-93a8-ceb9fb3bbe89.json  ca6008e9-ee4c-4752-bfb2-e660887f2b6d.json  f0153b2e-73a1-4aca-9208-14334892d16d.json  f8a1c2d3-4e5f-6a7b-8c9d-0e1f2a3b4c5d.json
data/badges/: 1a133069-aee9-4328-bcd8-63348d2e9a56.json  2ba2e35c-36e8-409b-b95f-9ce0de6d43c8.json  42f361e1-95b5-4391-9f10-715b3773fbb9.json  6fff32b4-b5a5-45fe-a78c-babb2be16f02.json  970d802c-b625-4bf2-9870-74aab2037864.json
data/bkt/: 1a133069-aee9-4328-bcd8-63348d2e9a56.json  6fff32b4-b5a5-45fe-a78c-babb2be16f02.json
data/classes/: 2bf42a65-8a69-4292-934b-c6e931c26ac5.json  46d1f755-c478-442d-be24-4d5e5588b59b.json
docs/: ARCHITECTURE.md  capture-the-error.md  colab-launch.md  demo-readiness.md  explanation-generation.md  fluency-trap.md  hook-mt-mockup.html  implementation-audit.md
scripts/: generate_ectel_report.py  generate_items.py  ingest_corpus.py  ingest_iate.py  scaffold_codebook_entries.py  validate_codebook.py
specs/: ECTEL2026_ToM_Experimental_Spec_v1.md  ToM-PE_Error_Injection_Annotation_Spec_v1.1.md  ToM-PE_System_Specification_v02.md  ToM-PE_UI_Specification_v1.md  ToM-PE_Wasserstein_Experimental_Spec_v2.md  compass_artifact_wf-17e8e61f-19be-43b5-9970-604abf215dc5_text_markdown.md  compass_artifact_wf-bfbae559-98eb-4593-97ba-5e3fb2f0a9b7_text_markdown.md  compass_artifact_wf-d1f840db-7592-438b-8d00-d5fee4017477_text_markdown.md
study/: __init__.py  study_app.py  study_config.json  study_manager.py
tests/: test_codebook.py  test_error_injector.py  test_mqm_taxonomy.py  test_mt_generator.py  test_schemas.py  test_segment_selector.py
(+226 files in other folders)
