[project]
name = "tompe"
version = "0.1.0"
description = "Theory of Mind-Informed Platform for Scaffolded MT Post-Editing Training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "gradio>=5.0",
    "streamlit>=1.41",
    "plotly>=6.0",
    "pyyaml>=6.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]
ml = [
    "unbabel-comet>=2.2",
    "transformers>=4.48",
    "torch>=2.0",
]

[project.scripts]
tompe-api = "tompe.services.api:main"
tompe-student = "tompe.interfaces.student_app:main"
tompe-teacher = "tompe.interfaces.teacher_app:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
